--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pickleshare>=0.7.5",
     "pillow>=11.0.0",
     "scikit-image>=0.25.0",
+    "tensorboard>=2.18.0",
     "torch>=2.5.1",
     "torchvision>=0.20.1",
 ]
