--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pillow>=11.0.0",
     "scikit-image>=0.25.0",
     "tensorboard>=2.18.0",
+    "torch-tb-profiler>=0.4.3",
     "torch>=2.5.1",
     "torchvision>=0.20.1",
 ]
